# codeql-test-sprintf

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
